tests/frontend/pass/array/array.act
contract A

transition f
interface f(address[2] xs)

returns xs[1]