tests/frontend/fail/array/out_of_bounds_iff.act
contract B

constructor
interface constructor()

creates

  int[3] a := [1,2,3]


transition f
interface f()

iff

  a[15] > 4

returns 1
